--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/PinkMirrorTelegramm.loader.js";
+      var loaderUrl = buildUrl + "/PinkMirrorTelegramm1.loader.js";
       var config = {
-        dataUrl: buildUrl + "/PinkMirrorTelegramm.data",
-        frameworkUrl: buildUrl + "/PinkMirrorTelegramm.framework.js",
-        codeUrl: buildUrl + "/PinkMirrorTelegramm.wasm",
+        dataUrl: buildUrl + "/PinkMirrorTelegramm1.data",
+        frameworkUrl: buildUrl + "/PinkMirrorTelegramm1.framework.js",
+        codeUrl: buildUrl + "/PinkMirrorTelegramm1.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "VAFgames",
         productName: "PinkMirror",
